--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 *.cache
 /project/project/target/
 !/project/project/target/config-classes/
+/*/src/main/java/
+/*/src/main/scala-2.11/
+/*/src/test/java/
+/*/src/test/scala-2.11/
